NIFI-16086 - Per Flow Registry Client sync frequency
Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>